# libnss_getdns

./: .gitignore  LICENSE  Makefile  Makefile.in  Makefile~  README.md  a.out  activate.sh  addr_utils.c  addr_utils.h  addrinfo.c  addrinfo.h  browsers.c  browsers.h  bsdnss.c  bsdnss.c~  client_test.c  common.c  comp.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  context_interface.c  context_interface.h  error_conv.c  gai_error.c  getaddrinfo.c  getnameinfo.c  hosts.c  ifaddr.c  intercept.c  logger.h  nameinfo.c  nss.c  nss_getdns.c  nss_getdns.h  nss_getdns.so.1  (+5 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
conf/: getdns-pfw  getdns-pfw-bsd  getdns-pfw.conf  getdns-pfw.sh  getdns.conf  net.getdnsapi.StubResolver.xml
context_proxies/dbus/: ipc_impl_dbus.c  ipc_interface.h  ipc_server.c
context_proxies/unix/: ipc_impl_unix.c  ipc_impl_unix.h  server.c
contexts/: http.c  http.h  ipc_impl_dbus.c  ipc_interface.h  ipc_server.c
data/: error.html  error_tpl.html  getdns-pfw-bsd.in  getdns-pfw-systemd.in  getdns-pfw-sysv.in  getdns-pfw-upstart.in  getdns-pfw.sh.in  getdns.conf  getdns.conf.example.in  net.getdnsapi.StubResolver.service  settings.html  settings_tpl.html
services/: http.c  http.h
test/: Makefile  Makefile.in  a.out  browser_detect_test.c  client.cdd  client_test.c  client_test.c~  comp.sh  conf.c  conf.c~  debug.c  desktop_entry.sample  example.c  example.c~  functions.c  functions.c~  gai_strerror_test.c  gai_test.c  getaddrinfo_test.c  getdns_app_preferences  http_test  http_test.c  nsswitch.h  opt_parse_test.c  server.cdd  slow_servers.txt
